# majorana_mapper

./: .gitignore  LICENSE  README.md  poc_output.txt  pyproject.toml
benchmarks/: benchmark_advanced.py  benchmark_advanced_results.txt  benchmark_advanced_results_final.txt  benchmark_advanced_results_utf8.txt  benchmark_molecules.py  report.md  transpilation_benchmark.py  transpilation_results.csv
docs/latex/: main.bbl  main.blg  main.tex  references.bib  vqe_diagram.md
docs/tex_src/: main.tex
examples/: poc_lih_uccsd.py
references/: bibliography.md
src/majorana_mapper/: annealing.py  cost_functions.py  majorana_mapper.py  tableau.py
tests/: test_majorana_mapper.py
